[project]
name = "strictyamlx"
version = "0.1.0"
description = "An extension of StrictYAML that adds more expressive schema tools for validation."
authors = [
    {name = "Muneeb ur Rahman",email = "muneebdev1@gmail.com"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12,<=3.14"
dependencies = [
    "strictyaml==1.7.3"
]

[tool.poetry]
packages = [{include = "strictyamlx", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)"
]
