[project]
name = "strictyamlx"
version = "0.3.3"
description = "An extension of StrictYAML that adds more expressive schema tools for validation."
authors = [
    {name = "Muneeb ur Rahman",email = "muneebdev1@gmail.com"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy"
]
dependencies = [
    "strictyaml==1.7.3"
]

[project.urls]
Repository = "https://github.com/notesbymuneeb/strictyamlx"
Documentation = "https://github.com/notesbymuneeb/strictyamlx/blob/main/README.md"

[tool.poetry]
packages = [{include = "strictyamlx", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)"
]
